--- a/.github/workflows/build-publish-eth-rpc.yml
+++ b/.github/workflows/build-publish-eth-rpc.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - 1017003-eth-rpc
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled]
 
@@ -55,7 +56,7 @@ jobs:
   build_push_docker:
     name: Build and push docker image
     runs-on: parity-large
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
     needs: [set-variables]
     env:
       VERSION: ${{ needs.set-variables.outputs.VERSION }}
