--- a/substrate/frame/statement/Cargo.toml
+++ b/substrate/frame/statement/Cargo.toml
@@ -16,14 +16,13 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { features = ["derive"], workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"]}
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 sp-api = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
+# sp-core = { workspace = true }
+# sp-io = { workspace = true }
+# sp-runtime = { workspace = true }
 sp-statement-store = { workspace = true }
 
 [dev-dependencies]
@@ -33,20 +32,18 @@ pallet-balances = { workspace = true, default-features = true }
 default = ["std"]
 std = [
 	"codec/std",
-	"frame-support/std",
-	"frame-system/std",
+	"frame/std",
 	"log/std",
 	"pallet-balances/std",
-	"scale-info/std",
-	"sp-api/std",
-	"sp-core/std",
-	"sp-io/std",
-	"sp-runtime/std",
+	# "scale-info/std",
+	# "sp-api/std",
+	# "sp-core/std",
+	# "sp-io/std",
+	# "sp-runtime/std",
 	"sp-statement-store/std",
 ]
 try-runtime = [
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
 	"pallet-balances/try-runtime",
-	"sp-runtime/try-runtime",
+	"frame/try-runtime",
+	# "sp-runtime/try-runtime",
 ]
