--- a/substrate/primitives/application-crypto/Cargo.toml
+++ b/substrate/primitives/application-crypto/Cargo.toml
@@ -23,12 +23,14 @@ codec = { features = ["derive"], workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { optional = true, features = ["alloc", "derive"], workspace = true }
 sp-io = { workspace = true }
+log = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
 	"codec/std",
 	"full_crypto",
+	"log/std",
 	"scale-info/std",
 	"serde/std",
 	"sp-core/std",
