--- a/polkadot/zombienet_tests/functional/0020-same-collation-to-all-assigned-cores.toml
+++ b/polkadot/zombienet_tests/functional/0020-same-collation-to-all-assigned-cores.toml
@@ -1,12 +1,15 @@
 [settings]
 timeout = 1000
 
-[relaychain]
-default_image = "{{ZOMBIENET_INTEGRATION_TEST_IMAGE}}"
-chain = "rococo-local"
+[relaychain.genesis.runtimeGenesis.patch.configuration.config.async_backing_params]
+max_candidate_depth = 6
 
 [relaychain.genesis.runtimeGenesis.patch.configuration.config.scheduler_params]
 num_cores = 2
+
+[relaychain]
+default_image = "{{ZOMBIENET_INTEGRATION_TEST_IMAGE}}"
+chain = "rococo-local"
 
 [relaychain.default_resources]
 limits = { memory = "4G", cpu = "2" }
@@ -18,11 +21,15 @@ requests = { memory = "2G", cpu = "1" }
 
   [[relaychain.nodes]]
   name = "bob"
-  args = [ "--bob", "-lparachain=debug,runtime=debug"]
+  args = [ "--bob", "-lparachain=debug,runtime=debug" ]
 
   [[relaychain.nodes]]
   name = "charlie"
   args = [ "--charlie", "-lparachain=debug,runtime=debug" ]
+  
+  [[relaychain.nodes]]
+  name = "dave"
+  args = [ "--dave", "-lparachain=debug,runtime=debug" ]
 
 [[parachains]]
 id = 2000
