--- a/.github/workflows/tests-linux-stable.yml
+++ b/.github/workflows/tests-linux-stable.yml
@@ -36,7 +36,7 @@ jobs:
   test-linux-stable-int:
     needs: [set-image, changes]
     if: ${{ needs.changes.outputs.rust }}
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     timeout-minutes: 60
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
@@ -57,7 +57,7 @@ jobs:
   test-linux-stable-runtime-benchmarks:
     needs: [set-image, changes]
     if: ${{ needs.changes.outputs.rust }}
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     timeout-minutes: 60
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
