--- a/.github/workflows/command-update-ui.yml
+++ b/.github/workflows/command-update-ui.yml
@@ -22,7 +22,7 @@ jobs:
         run: cat .github/env >> $GITHUB_OUTPUT
   cmd-update-ui:
     needs: [set-image]
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     timeout-minutes: 90
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
