--- a/Cargo.toml
+++ b/Cargo.toml
@@ -404,6 +404,7 @@ members = [
 	"substrate/frame/revive/mock-network",
 	"substrate/frame/revive/proc-macro",
 	"substrate/frame/revive/rpc",
+	"substrate/frame/revive/rpc/codegen",
 	"substrate/frame/revive/uapi",
 	"substrate/frame/root-offences",
 	"substrate/frame/root-testing",
