--- a/Cargo.toml
+++ b/Cargo.toml
@@ -754,6 +754,7 @@ emulated-integration-tests-common = { path = "cumulus/parachains/integration-tes
 enumflags2 = { version = "0.7.7" }
 enumn = { version = "0.1.13" }
 env_logger = { version = "0.11.2" }
+educe = { version = "0.6.0", default-features = false, features = ["Debug", "Clone", "PartialEq", "Eq", "PartialOrd", "Ord", "Default"] }
 environmental = { version = "1.1.4", default-features = false }
 equivocation-detector = { path = "bridges/relays/equivocation" }
 ethabi = { version = "2.0.0", default-features = false, package = "ethabi-decode" }
