--- a/.gitlab/pipeline/zombienet/polkadot.yml
+++ b/.gitlab/pipeline/zombienet/polkadot.yml
@@ -388,6 +388,7 @@ zombienet-polkadot-elastic-scaling-doesnt-break-parachains:
   before_script:
     - !reference [ ".zombienet-polkadot-common", "before_script" ]
     - export POLKADOT_IMAGE="${ZOMBIENET_INTEGRATION_TEST_IMAGE}"
+    - export CUMULUS_IMAGE="${COL_IMAGE}"
     - export X_INFRA_INSTANCE=spot # use spot by default
   variables:
     KUBERNETES_CPU_REQUEST: "1"
