--- a/templates/parachain/runtime/Cargo.toml
+++ b/templates/parachain/runtime/Cargo.toml
@@ -65,6 +65,7 @@ polkadot-sdk = { workspace = true, default-features = false, features = [
 cumulus-pallet-parachain-system = { workspace = true }
 
 [features]
+generate-readme = []
 default = ["std"]
 std = [
 	"codec/std",
