--- a/.github/workflows/check-cargo-check-runtimes.yml
+++ b/.github/workflows/check-cargo-check-runtimes.yml
@@ -23,7 +23,7 @@ jobs:
       - id: set_image
         run: cat .github/env >> $GITHUB_OUTPUT
   check-runtime-assets:
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     needs: [set-image]
     timeout-minutes: 20
     container:
@@ -37,7 +37,7 @@ jobs:
           root: cumulus/parachains/runtimes/assets
 
   check-runtime-collectives:
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     needs: [check-runtime-assets, set-image]
     timeout-minutes: 20
     container:
@@ -51,7 +51,7 @@ jobs:
           root: cumulus/parachains/runtimes/collectives
 
   check-runtime-coretime:
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
     needs: [check-runtime-assets, set-image]
@@ -65,7 +65,7 @@ jobs:
           root: cumulus/parachains/runtimes/coretime
 
   check-runtime-bridge-hubs:
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
     needs: [set-image]
@@ -79,7 +79,7 @@ jobs:
           root: cumulus/parachains/runtimes/bridge-hubs
 
   check-runtime-contracts:
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
     needs: [check-runtime-collectives, set-image]
@@ -93,7 +93,7 @@ jobs:
           root: cumulus/parachains/runtimes/contracts
 
   check-runtime-starters:
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
     needs: [check-runtime-assets, set-image]
@@ -107,7 +107,7 @@ jobs:
           root: cumulus/parachains/runtimes/starters
 
   check-runtime-testing:
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
     needs: [check-runtime-starters, set-image]
