--- a/.github/workflows/tests-linux-stable.yml
+++ b/.github/workflows/tests-linux-stable.yml
@@ -38,7 +38,7 @@ jobs:
   test-linux-stable-int:
     needs: [set-image, changes]
     if: ${{ needs.changes.outputs.rust }}
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     timeout-minutes: 60
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
@@ -59,7 +59,7 @@ jobs:
   test-linux-stable-runtime-benchmarks:
     needs: [set-image, changes]
     if: ${{ needs.changes.outputs.rust }}
-    runs-on: arc-runners-polkadot-sdk-beefy
+    runs-on: parity-large
     timeout-minutes: 60
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
@@ -83,7 +83,7 @@ jobs:
       fail-fast: false
       matrix:
         partition: [1/3, 2/3, 3/3]
-        runners: [arc-runners-polkadot-sdk-beefy, oldlinux]
+        runners: [parity-large, parity-oldlinux]
     container:
       image: ${{ needs.set-image.outputs.IMAGE }}
       # needed for tests that use unshare syscall
