--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -20,6 +20,7 @@ codec = { features = [
 pallet-revive-proc-macro = { workspace = true }
 paste = { workspace = true }
 scale-info = { features = ["derive"], optional = true, workspace = true }
+serde = { features = [ "alloc", "derive", ], optional = true, workspace = true, default-features = false }
 
 [target.'cfg(target_arch = "riscv64")'.dependencies]
 polkavm-derive = { version = "0.18.0" }
@@ -29,6 +30,7 @@ features = ["unstable-hostfn"]
 targets = ["riscv64imac-unknown-none-elf"]
 
 [features]
-default = ["scale"]
+default = ["scale", "serde"]
 scale = ["dep:codec", "scale-info"]
+serde = ["dep:serde"]
 unstable-hostfn = []
