--- a/.github/workflows/benchmarks-networking.yml
+++ b/.github/workflows/benchmarks-networking.yml
@@ -22,7 +22,7 @@ jobs:
   build:
     timeout-minutes: 50
     needs: [preflight]
-    runs-on: ${{ needs.preflight.outputs.RUNNER_BENCHMARK }}
+    runs-on: ${{ needs.preflight.outputs.RUNNER }}
     container:
       image: ${{ needs.preflight.outputs.IMAGE }}
     strategy:
