--- a/bridges/snowbridge/pallets/system-v2/Cargo.toml
+++ b/bridges/snowbridge/pallets/system-v2/Cargo.toml
@@ -73,6 +73,7 @@ runtime-benchmarks = [
 	"snowbridge-pallet-outbound-queue-v2/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"xcm-executor/runtime-benchmarks",
+	"xcm/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-support/try-runtime",
