cargo fmt and taplo format

--- a/templates/parachain/Dockerfile
+++ b/templates/parachain/Dockerfile
@@ -5,6 +5,7 @@ COPY . /polkadot
 
 RUN cargo fetch
 RUN cargo build --workspace --locked --release
+RUN cargo build --features generate-readme
 
 FROM docker.io/parity/base-bin:latest
 
