Fix merge conflicts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1441,3 +1441,4 @@ wasmi = { opt-level = 3 }
 x25519-dalek = { opt-level = 3 }
 yamux = { opt-level = 3 }
 zeroize = { opt-level = 3 }
+tikv-jemalloc-sys = { opt-level = 3 }
