--- a/polkadot/xcm/Cargo.toml
+++ b/polkadot/xcm/Cargo.toml
@@ -48,7 +48,4 @@ json-schema = [
 	"dep:schemars",
 	"sp-weights/json-schema",
 ]
-runtime-benchmarks = [
-	"frame-support/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
-]
+runtime-benchmarks = ["sp-runtime/runtime-benchmarks"]
