--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -50,6 +50,8 @@ sp-transaction-pool = { optional = true, workspace = true }
 sp-version = { optional = true, workspace = true }
 sp-staking = { optional = true, workspace = true }
 sp-state-machine = { optional = true, workspace = true }
+sp-staking = { features = ["serde"], workspace = true }
+sp-state-machine = { workspace = true }
 
 frame-executive = { optional = true, workspace = true }
 frame-system-rpc-runtime-api = { optional = true, workspace = true }
