--- a/substrate/frame/session/Cargo.toml
+++ b/substrate/frame/session/Cargo.toml
@@ -17,18 +17,11 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { features = ["derive"], workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"]}
 impl-trait-for-tuples = { workspace = true }
 log = { workspace = true }
 pallet-timestamp = { workspace = true }
 scale-info = { features = ["derive", "serde"], workspace = true }
-sp-core = { features = ["serde"], workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { features = ["serde"], workspace = true }
-sp-session = { workspace = true }
-sp-staking = { features = ["serde"], workspace = true }
-sp-state-machine = { workspace = true }
 sp-trie = { optional = true, workspace = true }
 
 [features]
@@ -36,22 +29,13 @@ default = ["historical", "std"]
 historical = ["sp-trie"]
 std = [
 	"codec/std",
-	"frame-support/std",
-	"frame-system/std",
+	"frame/std",
 	"log/std",
 	"pallet-timestamp/std",
 	"scale-info/std",
-	"sp-core/std",
-	"sp-io/std",
-	"sp-runtime/std",
-	"sp-session/std",
-	"sp-staking/std",
-	"sp-state-machine/std",
 	"sp-trie/std",
 ]
 try-runtime = [
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
 	"pallet-timestamp/try-runtime",
-	"sp-runtime/try-runtime",
+	"frame/try-runtime",
 ]
