--- a/substrate/bin/node/cli/Cargo.toml
+++ b/substrate/bin/node/cli/Cargo.toml
@@ -183,6 +183,9 @@ try-runtime = [
 	"polkadot-sdk/try-runtime",
 	"substrate-cli-test-utils/try-runtime",
 ]
+staking-playground = [
+	"kitchensink-runtime/staking-playground",
+]
 
 [[bench]]
 name = "transaction_pool"
