--- a/.github/workflows/checks-quick.yml
+++ b/.github/workflows/checks-quick.yml
@@ -93,6 +93,8 @@ jobs:
           "substrate/frame/contracts/fixtures/contracts/common"
           "substrate/frame/revive/fixtures/build"
           "substrate/frame/revive/fixtures/contracts/common"
+          "substrate/frame/sassafras"
+          "substrate/primitives/consensus/sassafras"
       - name: deny git deps
         run: python3 .github/scripts/deny-git-deps.py .
   check-markdown:
