--- a/templates/parachain/node/Cargo.toml
+++ b/templates/parachain/node/Cargo.toml
@@ -34,7 +34,11 @@ polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }
 
 [features]
 default = ["std"]
-std = ["log/std", "parachain-template-runtime/std", "polkadot-sdk/std"]
+std = [
+	"log/std",
+	"parachain-template-runtime/std",
+	"polkadot-sdk/std"
+]
 runtime-benchmarks = [
 	"parachain-template-runtime/runtime-benchmarks",
 	"polkadot-sdk/runtime-benchmarks",
