--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -48,6 +48,8 @@ sp-session = { optional = true, workspace = true }
 sp-storage = { optional = true, workspace = true }
 sp-transaction-pool = { optional = true, workspace = true }
 sp-version = { optional = true, workspace = true }
+sp-application-crypto = { optional = true, workspace = true }
+
 
 frame-executive = { optional = true, workspace = true }
 frame-system-rpc-runtime-api = { optional = true, workspace = true }
@@ -83,6 +85,7 @@ runtime = [
 	"sp-storage",
 	"sp-transaction-pool",
 	"sp-version",
+	"sp-application-crypto",
 ]
 std = [
 	"codec/std",
@@ -111,6 +114,7 @@ std = [
 	"sp-storage/std",
 	"sp-transaction-pool?/std",
 	"sp-version?/std",
+	"sp-application-crypto/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
