--- a/substrate/frame/benchmarking/Cargo.toml
+++ b/substrate/frame/benchmarking/Cargo.toml
@@ -17,21 +17,16 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { workspace = true }
-frame-support = { workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"]}
+# frame-support = { workspace = true }
 frame-support-procedural = { workspace = true }
-frame-system = { workspace = true }
+# frame-system = { workspace = true }
 linregress = { optional = true, workspace = true }
 log = { workspace = true }
 paste = { workspace = true, default-features = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { optional = true, workspace = true, default-features = true }
-sp-api = { workspace = true }
-sp-application-crypto = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
 sp-runtime-interface = { workspace = true }
-sp-storage = { workspace = true }
 static_assertions = { workspace = true, default-features = true }
 
 [dev-dependencies]
@@ -46,27 +41,17 @@ sp-state-machine = { workspace = true }
 default = ["std"]
 std = [
 	"codec/std",
+	"frame/std",
 	"frame-support-procedural/std",
-	"frame-support/std",
-	"frame-system/std",
 	"linregress",
 	"log/std",
 	"scale-info/std",
 	"serde",
-	"sp-api/std",
-	"sp-application-crypto/std",
-	"sp-core/std",
 	"sp-externalities/std",
-	"sp-io/std",
 	"sp-keystore/std",
 	"sp-runtime-interface/std",
-	"sp-runtime/std",
 	"sp-state-machine/std",
-	"sp-storage/std",
 ]
 runtime-benchmarks = [
-	"frame-support/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
 	"sc-client-db/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
 ]
