override rust version

--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: install parity-publish
         run: |
-          rustup install 1.82.0
-          cargo +stable install parity-publish@0.10.4 --locked -q
+          rustup override set 1.82.0
+          cargo install parity-publish@0.10.4 --locked -q
 
       - name: parity-publish update plan
         run: parity-publish --color always plan --skip-check --prdoc prdoc/
