Update to XCMv5 and fix small bits from merge

--- a/cumulus/parachains/runtimes/assets/asset-hub-next-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-next-westend/Cargo.toml
@@ -345,6 +345,8 @@ std = [
 	"xcm/std",
 ]
 
+fast-runtime = []
+
 # Enable the metadata hash generation in the wasm builder.
 metadata-hash = ["substrate-wasm-builder/metadata-hash"]
 
