--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1381,6 +1381,7 @@ westend-emulated-chain = { path = "cumulus/parachains/integration-tests/emulated
 westend-runtime = { path = "polkadot/runtime/westend" }
 westend-runtime-constants = { path = "polkadot/runtime/westend/constants", default-features = false }
 westend-system-emulated-network = { path = "cumulus/parachains/integration-tests/emulated/networks/westend-system" }
+which = { version = "7.0.1" }
 x25519-dalek = { version = "2.0" }
 xcm = { path = "polkadot/xcm", default-features = false, package = "staging-xcm" }
 xcm-builder = { path = "polkadot/xcm/xcm-builder", default-features = false, package = "staging-xcm-builder" }
@@ -1391,6 +1392,7 @@ xcm-procedural = { path = "polkadot/xcm/procedural", default-features = false }
 xcm-runtime-apis = { path = "polkadot/xcm/xcm-runtime-apis", default-features = false }
 xcm-simulator = { path = "polkadot/xcm/xcm-simulator", default-features = false }
 zeroize = { version = "1.7.0", default-features = false }
+zombienet-configuration = { version = "0.2.20" }
 zombienet-sdk = { version = "0.2.20" }
 zstd = { version = "0.12.4", default-features = false }
 
