--- a/substrate/frame/nomination-pools/Cargo.toml
+++ b/substrate/frame/nomination-pools/Cargo.toml
@@ -24,13 +24,8 @@ scale-info = { features = [
 ], workspace = true }
 
 # FRAME
-frame-support = { workspace = true }
-frame-system = { workspace = true }
 log = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-staking = { workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"]}
 
 # Optional: use for testing and/or fuzzing
 pallet-balances = { optional = true, workspace = true }
@@ -45,27 +40,16 @@ default = ["std"]
 fuzzing = ["pallet-balances", "sp-tracing"]
 std = [
 	"codec/std",
-	"frame-support/std",
-	"frame-system/std",
+	"frame/std",
 	"log/std",
 	"pallet-balances?/std",
 	"scale-info/std",
-	"sp-core/std",
-	"sp-io/std",
-	"sp-runtime/std",
-	"sp-staking/std",
 	"sp-tracing?/std",
 ]
 runtime-benchmarks = [
-	"frame-support/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
 	"pallet-balances?/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
-	"sp-staking/runtime-benchmarks",
 ]
 try-runtime = [
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
 	"pallet-balances?/try-runtime",
-	"sp-runtime/try-runtime",
+	"frame/try-runtime"
 ]
