--- a/substrate/frame/nomination-pools/runtime-api/Cargo.toml
+++ b/substrate/frame/nomination-pools/runtime-api/Cargo.toml
@@ -18,8 +18,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { features = ["derive"], workspace = true }
 pallet-nomination-pools = { workspace = true }
-sp-api = { workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"]}
 
 [features]
 default = ["std"]
-std = ["codec/std", "pallet-nomination-pools/std", "sp-api/std"]
+std = ["codec/std", "pallet-nomination-pools/std", "frame/std"]
