--- a/.github/workflows/zombienet-reusable-preflight.yml
+++ b/.github/workflows/zombienet-reusable-preflight.yml
@@ -123,7 +123,9 @@ jobs:
       - name: Set vars
         id: set_vars
         shell: bash
-        run: cat .github/zombienet-env >> $GITHUB_OUTPUT
+        run: |
+          cat .github/zombienet-env
+          cat .github/zombienet-env >> $GITHUB_OUTPUT
 
 
       #
